# 386FinalProject

./: README.md  pyproject.toml  requirements.txt  run.py  streamlit_app.py
Analysis/: crime_summary.csv  incident_rate_model.ipynb  incident_rate_model.py
cleaning/: Cleaning data.py  __init__.py  clean_analysis_data.py  clean_population.py  cleaning_data.py
docs/: _config.yml  api.md  index.md  report.md  tutorial.md
opendata_utah_csvs/: cache_county_sheriff.csv  clinton_crime.csv  logan_crime.csv  orem_crime.csv  price_crime.csv  roy_crime.csv  slc_assault_2012.csv  slc_county_crime_by_city.csv  smithfield_crime.csv  syracuse_crime.csv  uvu_campus_crime.csv
scrapping/: scrape_population.py  utahOpenportal.py
tests/: test_cleaning.py
visualizations/: __init__.py  data_loader.py  exporter.py  index.html
visualizations/css/: style.css
visualizations/js/: charts.js  controls.js  map.js
