[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "utah-crime-analysis"
version = "0.1.0"
description = "Utah crime incident rate analysis and visualization package (2007-2019)"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "statsmodels",
    "requests",
    "streamlit",
    "plotly",
    "folium",
    "streamlit-folium",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cleaning*", "visualizations*", "scrapping*", "Analysis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
